# parallel-bz2-redux

./: Cargo.toml  PLAN.md  README.md  rustfmt.toml
.cargo/: config.toml
benches/: throughput.rs
examples/: verify_compress.rs  verify_decompress.rs  verify_roundtrip.rs
src/: bits.rs  crc.rs  error.rs  lib.rs  scanner.rs
src/compress/: block.rs  mod.rs  pipeline.rs
src/decompress/: block.rs  mod.rs  pipeline.rs
tests/: compress_roundtrip.rs  edge_cases.rs  false_positive.rs  roundtrip.rs
