[package]
name = "parallel-bz2-redux"
version = "0.1.0"
edition = "2024"
description = "Correct, high-performance parallel bzip2 compression and decompression"
license = "CC0-1.0"

[dependencies]
bzip2 = "0.5"
rayon = "1.10"
crossbeam-channel = "0.5"
memmap2 = "0.9"
aho-corasick = "1"
thiserror = "2"
