[package]
name = "parallel-bz2-redux"
version = "0.1.0"
edition = "2024"
description = "Correct, high-performance parallel bzip2 compression and decompression"
repository = "https://github.com/slop-mopper/parallel-bz2-redux"
license = "Unlicense"
readme = "README.md"

[dependencies]
bzip2 = "0.5"
rayon = "1.10"
crossbeam-channel = "0.5"
aho-corasick = "1"
thiserror = "2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dev-dependencies]
indicatif = "0.18"
