[package]
name = "parallel-bz2-redux"
version = "1.1.0"
edition = "2024"
description = "Correct, high-performance parallel bzip2 compression and decompression"
repository = "https://github.com/slop-mopper/parallel-bz2-redux"
license = "CC0-1.0"
readme = "README.md"
keywords = ["bzip2", "parallel", "compression", "decompression", "rayon"]
categories = ["compression", "concurrency"]

[dependencies]
bzip2 = "0.6"
rayon = "1.10"
crossbeam-channel = "0.5"
aho-corasick = "1"
thiserror = "2"
memmap2 = "0.9"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
indicatif = "0.18"
lipsum = "0.9"

[[bench]]
name = "throughput"
harness = false
